kubernetes/content-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-api-service
  labels:
    app: content-api-service
spec:
  ports:
  - port: 4567
    name: http
    targetPort: 4567
  selector:
    app: content-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-api
  template:
    metadata:
      labels:
        app: content-api
    spec:
      containers:
      - name: content-api
        image: 637423538949.dkr.ecr.eu-central-1.amazonaws.com/content-api:latest
        ports:
        - containerPort: 4567
