kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: rails-ingress
    alb.ingress.kubernetes.io/subnets: public-eu-central-1a, public-eu-central-1b
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: rails-app-service
              port:
                number: 3000
